auto show on div elements

--- a/test/index.html
+++ b/test/index.html
@@ -45,6 +45,15 @@
     </div>
   </main>
 
+  <div class="toast-auto" data-message="Auto message toast" data-type="success" data-position="top-right"
+    data-theme="light" data-duration="5000">
+  </div>
+
+
+  <div class="toast-auto" data-message="Auto message toast" data-type="error" data-position="top-left" data-theme="dark"
+    data-duration="5000">
+  </div>
+
   <script src="../dist/toast.js"></script>
   <script src="script.js"></script>
 </body>
